# embedding-drift-graph

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ORIGIN.md
src/embedding_drift/: __init__.py  __main__.py  schema.py  store.py
tests/: test_schema.py  test_store.py
